resources/css/style.css
html {
  background-color: white;
  font-family: Helvetica;
  font-size: 18px;
}

body {
  line-height: 1.4rem;
}

.container {
  max-width: 960px;
  margin: auto;
}

.flex {
  display: flex;
}

a {
  color: white;
  text-decoration: none;
}

ul {
  list-style-type: none;
}

/* Header */

header {
  height: 30rem;
  background-image: url("../images/glasses-bg.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  padding-top: 1rem;
}

h1 {
  font-size: 2rem;
  font-weight: bold;
  margin: .67em 0;
}

nav {
  padding: 1rem 0;
  background-color: cadetblue;
  color: white;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

nav div {
  display: flex;
  align-items: center;
}

nav img {
  height: 1.5rem;
  margin-left: 2rem;
  margin-right: 1rem;
}

ul li {
  display: inline;
  padding: 0 1rem;
}

ul {
  margin-right: 1rem;
}

.truncated-menu {
  display: none;
}

header .flex {
  justify-content: flex-end;
}

.main-banner {
  background-color: white;
  padding: 0.75rem 5rem;
  display: inline-block;
  margin-top: 10rem;
  margin-right: -2rem;
  line-height: 2.4rem;
}

/* Sections  */

.supporting {
  display: flex;
  justify-content: center;
  flex-direction: row;
}

/* Icon section  */

.icons {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  text-align: center;
  margin: 3rem 6rem;
  width: 5rem;
  height: 8rem;
}

.icons img {
  width: 5rem;
  margin-bottom: 1rem;
}

.icons img .paper-icon {
  width: 3.5rem;
}

section {
  display: flex;
  width: 100%;
  height: auto;
  align-items: flex-start;
  flex-direction: column;
}

/* Info section  */

.info {
  width: 35%;
  margin-right: 5%;
  margin-bottom: 4rem;
}

.info p {
  padding: 1rem 0;
}

.title {
  background-color: cadetblue;
  padding: 0.5rem 1.25rem;
  font-weight: bold;
  color: white;
  max-width: 10rem;
}

/* Footer */

footer {
  padding: 4rem 2rem;
  background-color: azure;
  display: flex;
  align-items: center;
}

footer img {
  height: 1.5rem;
  margin-left: 2rem;
  margin-right: 1rem;
}

/*Tablet*/

